--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,7 +69,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/PythonScriptPlugin.PythonScriptPluginSettings]
-+AdditionalPaths=(Path="../../../../../../Users/pedro/Documents/Unreal Projects/Teste/Script")
++AdditionalPaths=(Path="../../../../../../Users/pedro/Documents/Unreal Projects/PythonCrash/Script")
 bIsolateInterpreterEnvironment=True
 bDeveloperMode=False
 bRemoteExecution=False
