--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -519,6 +519,7 @@ EdGraph.Inputs=True
 EdGraph.Outputs=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
+K2Node_MakeStruct.PinOptions=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -531,7 +532,7 @@ PythonScriptPluginSettings.Python=True
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=324.000
-WindowSize=X=1296.000 Y=736.000
+WindowSize=X=1304.000 Y=744.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -548,7 +549,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/pedro/Documents/Unreal Projects/Teste/Content
+UNR=../../../../../../Users/pedro/Documents/Unreal Projects/PythonCrash/Content
 BRUSH=../../../../../../Users/pedro/Documents/Unreal Projects/Teste/Content/
 FBX=../../../../../../Users/pedro/Documents/Unreal Projects/Teste/Content/
 FBXAnim=../../../../../../Users/pedro/Documents/Unreal Projects/Teste/Content/
@@ -1634,4 +1635,18 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
